update OpenAPI
